@@ -1,5 +1,3 @@
-- partial inheritance checks; does not check for ambiguous declarations
-
 - if an parse error occurs, memory will be leaked--implement an
   allocator and do a non-recursive free if parse fails
 
